fix overlapping footer

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -13,7 +13,6 @@
 
 @media screen and (max-width: 599px) {
   .Footer {
-    display: flex;
-    padding: 5px;
+    padding: 25px;
   }
 }
